--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    font-size: 2em;
+    font-size: 1.5em;
     font-family: Input Mono;
 }
 
@@ -20,10 +20,13 @@ td:hover {
 .header-row {
     font-weight: bold;
     border: 2px solid black;
+    background-color: pink;
 }
 
-.header-row:hover {
-    transtion-duration: 0.5s;
-    background-color: darken(pink, 10%);
+td:first-child {
+    font-weight: bold;
 }
 
+td:nth-child(4) {
+    font-size: 0.75em;
+}
