--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ td:hover {
     background-color: pink;
 }
 
-.header-row {
+th {
     font-weight: bold;
     border: 2px solid black;
     background-color: pink;
@@ -29,4 +29,8 @@ td:first-child {
 
 td:nth-child(4) {
     font-size: 0.75em;
+}
+
+tr:nth-child(odd) {
+  background: #eee;
 }
